tests/unsafe/neg/Var.hs
{-@ LIQUID "--Werror" @-}

module Var where

g :: ()
g = undefined
